--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" type="image/x-icon" href="../public/img/iconfinder.png" />
     <title>Adega Meia Noite</title>
 </head>
@@ -42,7 +42,7 @@
                     <!-- logo -->
                     <nav class="logo">
                         <a class="navbar-brand" href="#">
-                            <img src="../public/img/adegalogo.png" alt="logo">
+                            <img src="./public/img/adegalogo.png" alt="logo">
                         </a>
                     </nav>
                     <nav id="main">
@@ -58,7 +58,7 @@
                 <!-- flex -->
                 <div class="mobile-menu-icon">
                     <button onclick="menuShow()">
-                        <img class="icon" src="../public/img/menu_white_36dp.svg" />
+                        <img class="icon" src="./public/img/menu_white_36dp.svg" />
                     </button>
                 </div>
                 <!-- mobile-menu-icon -->
@@ -99,7 +99,7 @@
                             <!-- Slide-start -->
                             <div class="swiper-slide tranding-slide">
                                 <div class="tranding-slide-img">
-                                    <img src="../public/img/jk.png" alt="Tranding">
+                                    <img src="./public/img/jk.png" alt="Tranding">
                                 </div>
                                 <div class="tranding-slide-content">
                                     <div class="tranding-slide-content-bottom">
@@ -113,7 +113,7 @@
                             <!-- Slide-start -->
                             <div class="swiper-slide tranding-slide">
                                 <div class="tranding-slide-img">
-                                    <img src="../public/img/jk-maca.png" alt="Tranding">
+                                    <img src="./public/img/jk-maca.png" alt="Tranding">
                                 </div>
                                 <div class="tranding-slide-content">
                                     <div class="tranding-slide-content-bottom">
@@ -141,7 +141,7 @@
                             <!-- Slide-start -->
                             <div class="swiper-slide tranding-slide">
                                 <div class="tranding-slide-img">
-                                    <img src="../public/img/ComboJK.png" alt="Tranding">
+                                    <img src="./public/img/ComboJK.png" alt="Tranding">
                                 </div>
                                 <div class="tranding-slide-content">
                                     <div class="tranding-slide-content-bottom">
@@ -155,7 +155,7 @@
                             <!-- Slide-start -->
                             <div class="swiper-slide tranding-slide">
                                 <div class="tranding-slide-img">
-                                    <img src="../public/img/Smirnorff.png" alt="Tranding">
+                                    <img src="./public/img/Smirnorff.png" alt="Tranding">
                                 </div>
                                 <div class="tranding-slide-content">
                                     <div class="tranding-slide-content-bottom">
@@ -169,7 +169,7 @@
                             <!-- Slide-start -->
                             <div class="swiper-slide tranding-slide">
                                 <div class="tranding-slide-img">
-                                    <img src="../public/img/Licor.png" alt="Tranding">
+                                    <img src="./public/img/Licor.png" alt="Tranding">
                                 </div>
                                 <div class="tranding-slide-content">
                                     <div class="tranding-slide-content-bottom">
@@ -183,7 +183,7 @@
                             <!-- Slide-start -->
                             <div class="swiper-slide tranding-slide">
                                 <div class="tranding-slide-img">
-                                    <img src="../public/img/ComboGin.png" alt="Tranding">
+                                    <img src="./public/img/ComboGin.png" alt="Tranding">
                                 </div>
                                 <div class="tranding-slide-content">
                                     <div class="tranding-slide-content-bottom">
@@ -211,7 +211,7 @@
         <div class="sobre" id="novo2">
             <div class="sobre-box">
                 <div class="sobre-image">
-                    <img src="../public/img/iconfinder.png">
+                    <img src="./public/img/iconfinder.png">
                 </div>
                 <div class="sobre-body">
                     <h1 class="titulo">Sobre nós</h1>
@@ -234,7 +234,7 @@
             <div class="container">
 
                 <a href="#" id="topo">
-                    <img src="../public/img/topo.png" alt="Ir para o topo do site">
+                    <img src="./public/img/topo.png" alt="Ir para o topo do site">
                 </a>
             </div>
 
@@ -283,7 +283,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
