--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image/x-icon" href="../public/img/iconfinder.png" />
+    <link rel="icon" type="image/x-icon" href="./public/img/iconfinder.png" />
     <title>Adega Meia Noite</title>
 </head>
 
@@ -127,7 +127,7 @@
                             <!-- Slide-start -->
                             <div class="swiper-slide tranding-slide">
                                 <div class="tranding-slide-img">
-                                    <img src="../public/img/gin.png" alt="Tranding">
+                                    <img src="./public/img/gin.png" alt="Tranding">
                                 </div>
                                 <div class="tranding-slide-content">
                                     <div class="tranding-slide-content-bottom">
