--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         encontrar
                         a bebida perfeita para cada ocasião.
                         Venha nos visitar e descubra uma seleção feita para quem valoriza qualidade e autenticidade,
-                        num ambiente de alegria. Na Adega Meia Noite, drink é um brinde ao luar!
+                        num ambiente de alegria. Na Adega Meia Noite, cada drink é um brinde ao luar!
                     </p>
                 </div>
             </div>
